--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,7 @@ a {
 .gradient__text {
   background: var(--gradient-text);
   background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-background-fill-color: transparent;
+  color: transparent;
 }
 
 .section__padding {
@@ -99,7 +98,7 @@ a {
   }
 }
 
-@media screen and (max-width: "700px") {
+@media screen and (max-width: 700px) {
   .section__padding {
     padding: 4rem;
   }
@@ -107,7 +106,7 @@ a {
     margin: 4rem;
   }
 }
-@media screen and (max-width: "550px") {
+@media screen and (max-width: 550px) {
   .section__padding {
     padding: 4rem 2rem;
   }
